fixed broken css

--- a/css/pages.less
+++ b/css/pages.less
@@ -1,4 +1,3 @@
-.te
 /* =================== INTRO PAGE =================== */
 .intro-page {
 	.header { margin-bottom:50px;
@@ -93,8 +92,8 @@
 	.field {border-bottom:1px solid darken(@grey, 12%); border-top:1px dotted lighten(@grey, 15%); margin:0; padding:8px 0; }
 	.field.first {border-top:0 none;}
 	.field.last {border-bottom:0 none;}
-	.time select {float:left; margin:4px 0 0 0; width:208px;}
-	.text input, textarea {float:left; }
+	.time select {margin:4px 0 0 0; width:208px;}
+	.time select, .text input, textarea {float:left; }
 	.field > label {width:140px; .museo(500);}
 	.image label {width:180px;}
 	.image input {margin-top:8px;}
